castMobile.css
@import "cast.css";

#credits {
    margin-left: 180px;
    float: none;
    margin-top: 2%;
    position: relative;
    width: fit-content;
    margin-right: auto;
    font-size: 1.5em;
}

h2 {
    float: none;
    position: relative;
    width: fit-content;
    margin: 0 auto;
}

#firstOne {
    margin-top: 0;
}

@media only screen and (max-aspect-ratio: 1/1) {

    h2 {
        font-size: 150px;
        padding: 0 15px 0 0;
        margin-top: 5%;
    }

    #credits {
        margin-left: auto;
        font-size: 60px;
        width: 800px;
    }

    main ul {
        margin-left: auto;
        margin-right: auto;
    }

    main ul li {
        display: block;
        overflow-wrap: break-word;
        margin: 1100px auto;
        font-size: 25px;
        scale: 3.75;
    }

    #firstOne {
        margin-top: 600px;
    }

}

